fix item aligning

--- a/frontend/src/app/interfaces/add-wallet/add-wallet.component.css
+++ b/frontend/src/app/interfaces/add-wallet/add-wallet.component.css
@@ -22,7 +22,7 @@ mat-card {
     max-width: 400px;
 }
 
-mat-card-content {
+.wallet-list-card-content {
     width: 100%;
 }
 
